# git-commit-gen

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/git_commit_gen/: cli.py  generator.py  git_utils.py
